[package]
name = "yaminabe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
sudo = "0.6.0"
uuid = { version = "1.8.0", features = ["v4"] }
wait-timeout = "0.2.0"
